<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#FAFAFA"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">

            <EditText
                android:id="@+id/id_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:drawableLeft="@drawable/ic_man_user"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#000000"
                tools:ignore="HardcodedText,RtlHardcoded" />
            <EditText
                android:id="@+id/id_user_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="12dp"
                android:ems="10"

                android:hint="........"
                android:inputType="textVisiblePassword"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#000000"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <Button
                android:id="@+id/id_btn_login"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimaryDark"
                android:clickable="true"
                android:padding="16dp"
                android:text="Login"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18dp"
                tools:ignore="HardcodedText,SpUsage" />

            <Button
                android:id="@+id/id_btn_signup"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:clickable="true"
                android:padding="16dp"
                android:text="Sign Up"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18dp"
                tools:ignore="HardcodedText,SpUsage" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>