<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.shahidkhan.backupapp.activites.SignupActivity"
    android:background="#FAFAFA">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">

        <EditText
            android:id="@+id/id_usernameSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:drawableLeft="@drawable/ic_man_user"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="username"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="8dp"
            android:textColorHint="#000000"
            tools:ignore="HardcodedText,RtlHardcoded" />
        <!--
        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f9d7db"/>
            -->
        <EditText
            android:id="@+id/id_user_passSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="........"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="8dp"
            android:textColorHint="#000000"
            tools:ignore="HardcodedText,RtlHardcoded" />
        <!--
        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f9d7db"/>
            -->
        <Button

            android:id="@+id/id_btn_signupReg"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"

            android:clickable="true"
            android:padding="16dp"
            android:text="Sign Up"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18dp"
            tools:ignore="HardcodedText,SpUsage" />



    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>